# lora-finetune-lab

./: .gitignore  CLAUDE.md  README.md  RESULTS.md  pyproject.toml  requirements.txt
.ci/: ci.yml
examples/: baseline_predictions.jsonl
kaggle/: finetune_kaggle.py
queue/001/: diff.patch  msg.txt
queue/002/: diff.patch  msg.txt
queue/003/: diff.patch  msg.txt
queue/004/: diff.patch
queue/005/: diff.patch
queue/006/: diff.patch  msg.txt
queue/007/: diff.patch
queue/008/: diff.patch
queue/009/: diff.patch  msg.txt
queue/010/: diff.patch  msg.txt
queue/011/: diff.patch  msg.txt
queue/012/: diff.patch  msg.txt
queue/013/: diff.patch  msg.txt
queue/014/: diff.patch
queue/015/: diff.patch  msg.txt
