[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-finetune-lab"
version = "0.1.0"
description = "LoRA fine-tuning lab: data prep, training, evaluation, and model cards"
authors = [
    { name = "Girisankar G", email = "girisankargopakumar@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
    "torch>=2",
    "transformers>=4.46",
    "peft>=0.10",
    "datasets>=2",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
loralab = "lora_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
